NEW_COMMIT